add sse endpoint
